# rules_go_simple

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  def.bzl  deps.bzl  go.bzl  go.mod
internal/: BUILD.bazel  BUILD.bazel.go_download.tpl  BUILD.dist.bazel.tpl  actions.bzl  build_stdlib.sh  build_tool.sh  go_ext.bzl  providers.bzl  repo.bzl  rules.bzl  stdlib.ps1  stdlib.sh  tool_binary.ps1  tool_binary.sh  toolchain.bzl  util.bzl
internal/builder/: BUILD.bazel  builder.go  compile.go  flags.go  importcfg.go  link.go  sourceinfo.go  test.go
tests/: BUILD.bazel  bar.go  baz.go  bin_with_libs.go  bin_with_libs_test.go  bin_with_libs_test.sh  data_test.go  data_test.sh  external_test.go  foo.go  hello.go  hello_test.go  hello_test.sh  internal_test.go  list_data_bin.go  list_data_lib.go  message.go
v1/: def.bzl  deps.bzl
v1/internal/: actions.bzl  rules.bzl
v1/tests/: BUILD.bazel
v2/: BUILD.bazel  def.bzl  deps.bzl
v2/internal/: actions.bzl  providers.bzl  rules.bzl
v2/tests/: BUILD.bazel  bar.go  bin_with_libs.go  foo.go
v3/: def.bzl  deps.bzl
v3/internal/: actions.bzl
v3/tests/: bar.go  bin_with_libs.go  foo.go  list_data_bin.go
v4/: def.bzl  deps.bzl
v4/internal/: actions.bzl  rules.bzl
v4/internal/builder/: BUILD.bazel  importcfg.go  test.go
v4/tests/: BUILD.bazel  bin_with_libs.go  bin_with_libs_test.go  data_test.go  external_test.go  foo.go  hello_test.go  internal_external_lib.go  list_data_bin.go
v5/: def.bzl  deps.bzl
v5/internal/: BUILD.dist.bazel.tpl  actions.bzl  providers.bzl  repo.bzl  rules.bzl  toolchain.bzl
v5/internal/builder/: compile.go  env.go  test.go
v5/tests/: BUILD.bazel  bar.go  bin_with_libs.go  bin_with_libs_test.go  data_test.go  external_test.go  foo.go  hello_test.go  list_data_bin.go
