# Empty build file, just here to define a package.

alias(
    name = "stdlib_script",
    actual = select({
        "@platforms//os:windows": "stdlib.ps1",
        "//conditions:default": "stdlib.sh",
    }),
)

alias(
    name = "tool_binary_script",
    actual = select({
        "@platforms//os:windows": "tool_binary.ps1",
        "//conditions:default": "tool_binary.sh",
    }),
)
