load("//internal:rules.bzl", "go_tool_binary")

# builder is a tool used to perform various tasks related to building Go code,
# such as compiling packages, linking executables, and generating
# test sources.
go_tool_binary(
    name = "builder",
    srcs = [
        "builder.go",
        "compile.go",
        "flags.go",
        "importcfg.go",
        "link.go",
        "sourceinfo.go",
        "test.go",
    ],
    visibility = ["//visibility:public"],
)
